rollback from preview feature