@@ -1,15 +1,10 @@
 #!/usr/bin/env bash
 
-chmod a+x ../util/compile.sh
-chmod a+x ../util/modularJar.sh
-
-../util/compile.sh
-../util/modularJar.sh
+#make sure the util module is compiled before running this script
 
 mvn clean install
 
-javac -d ../mods/helper --enable-preview --source 14 \
---module-path ../mods:modules \
+javac -Xlint:deprecation -d ../mods/helper --module-path ../mods:modules \
 src/main/java/module-info.java \
 src/main/java/com/kodcu/helper/ClusterConfiguratorHelper.java \
 src/main/java/com/kodcu/helper/HttpServerHelper.java \
