@@ -1,3 +1,3 @@
 #!/usr/bin/env bash
 
-java --enable-preview -p ../modularjars:../entity/modules:../helper/modules -m local.shared.maps
+java -p ../modularjars:../entity/modules:../helper/modules -m local.shared.maps
