@@ -4,7 +4,7 @@
 
 mvn clean install
 
-javac -d ../mods/receiver --enable-preview --source 14 \
+javac -d ../mods/receiver \
 --module-path ../mods:../helper/modules:modules \
 src/main/java/module-info.java \
 src/main/java/com/kodcu/clustered/receiver/verticle/ClusteredReceiver.java \
